some more TeilnehmerFormDialog rework